fixed spacing in between sections

--- a/app/components/CreateYourOwn/CreateYourOwn.module.css
+++ b/app/components/CreateYourOwn/CreateYourOwn.module.css
@@ -1,7 +1,7 @@
 /* Container */
 .container {
   width: 100%;
-  height: 608px;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
